Fix checkbox word wrap for german "mix teams" setting

--- a/TDS_Client/Window/mainNew/src/app/components/lobbycreator/custom-lobby-menu.component.scss
+++ b/TDS_Client/Window/mainNew/src/app/components/lobbycreator/custom-lobby-menu.component.scss
@@ -91,6 +91,7 @@
     }
 
     ::ng-deep .mat-checkbox-label {
+      white-space: normal;
       word-wrap: break-word;
     }
 
